# rest_api_liteStar-

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: users.py
app/database/: config.py  migrations.py
app/models/: user.py
app/schemas/: user.py
migrations/: env.py
migrations/versions/: 333c765723c9_initial_migration.py
