[tool.poetry]
name = "litestar-user-api"
version = "0.1.0"
description = "Тестовое"
authors = ["Mikhail Trofimov <mishatrof21@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1"
litestar = {extras = ["standard"], version = "^2"}
litestar-granian = "^0"
litestar-asyncpg = "^0"
advanced-alchemy = "^0.20"
pydantic = "^2.10.6"
pydantic-settings = "^2.1.0"
msgspec = "^0.18.6"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 